# autodiff

./: Cargo.toml  README.md
src/: dual.rs  error.rs  evaluator.rs  lexer.rs  main.rs  parser.rs
