[package]
name = "autodiff"
version = "0.1.0"
edition = "2024"
description = "A program for getting the derivative of a function at an exact coordinate using dual numbers"
license = "MIT"
repository = "https://github.com/KirbyTheBurger/autodiff"
readme = "README.md"
keywords = ["math", "calculus"]
categories = ["mathematics"]

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
num = "0.4.3"
